fix spacing

--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -67,7 +67,7 @@
 .timeline__secondary {
   background-color: initial;
   padding-right: 12px;
-  margin-bottom: 40px;
+  margin-bottom: 24px;
   flex: 1 0;
 }
 
